@@ -1,13 +1,12 @@
 package br.com.utfpr.gerenciamento.server.controller;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.any;
 
 import br.com.utfpr.gerenciamento.server.dto.FornecedorResponseDto;
 import br.com.utfpr.gerenciamento.server.model.Fornecedor;
 import br.com.utfpr.gerenciamento.server.service.FornecedorService;
-import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -38,38 +37,52 @@ class FornecedorControllerTest {
     fornecedor = new Fornecedor();
     fornecedor.setId(1L);
     fornecedor.setNomeFantasia("Fornecedor Teste");
+    fornecedor.setRazaoSocial("Empresa Teste Ltda");
+    fornecedor.setCnpj("12345678901234");
+    fornecedor.setEmail("contato@teste.com");
+    fornecedor.setTelefone("1122334455");
 
     fornecedorResponseDto = new FornecedorResponseDto();
     fornecedorResponseDto.setId(1L);
     fornecedorResponseDto.setNomeFantasia("Fornecedor Teste");
+    fornecedorResponseDto.setRazaoSocial("Empresa Teste Ltda");
+    fornecedorResponseDto.setCnpj("12345678901234");
+    fornecedorResponseDto.setEmail("contato@teste.com");
+    fornecedorResponseDto.setTelefone("1122334455");
 
-    fornecedores = Arrays.asList(fornecedor, new Fornecedor());
-    fornecedoresDto = Arrays.asList(fornecedorResponseDto, new FornecedorResponseDto());
+    // Criar lista com 2 fornecedores para testes
+    Fornecedor fornecedor2 = new Fornecedor();
+    fornecedor2.setId(2L);
+    fornecedor2.setNomeFantasia("Fornecedor Teste 2");
+    fornecedor2.setRazaoSocial("Empresa Teste 2 Ltda");
+    fornecedor2.setCnpj("98765432109876");
+    fornecedor2.setEmail("contato2@teste.com");
+    fornecedor2.setTelefone("9988776655");
+
+    FornecedorResponseDto fornecedorResponseDto2 = createFornecedorResponseDtoAlternativo();
+
+    fornecedores = List.of(fornecedor, fornecedor2);
+    fornecedoresDto = List.of(fornecedorResponseDto, fornecedorResponseDto2);
   }
 
   @Test
   void testGetService() {
-    // When
     var service = fornecedorController.getService();
 
-    // Then
     assertNotNull(service);
     assertEquals(fornecedorService, service);
   }
 
   @Test
   void testComplete() {
-    // Given
     String query = "teste";
     when(fornecedorService.completeFornecedor(query)).thenReturn(fornecedores);
     when(fornecedorService.toDto(any(Fornecedor.class)))
         .thenReturn(fornecedorResponseDto)
-        .thenReturn(new FornecedorResponseDto());
+        .thenReturn(createFornecedorResponseDtoAlternativo());
 
-    // When
     List<FornecedorResponseDto> result = fornecedorController.complete(query);
 
-    // Then
     assertNotNull(result);
     assertEquals(2, result.size());
     verify(fornecedorService).completeFornecedor(query);
@@ -78,17 +91,14 @@ class FornecedorControllerTest {
 
   @Test
   void testCompleteWithEmptyQuery() {
-    // Given
     String query = "";
     when(fornecedorService.completeFornecedor(query)).thenReturn(fornecedores);
     when(fornecedorService.toDto(any(Fornecedor.class)))
         .thenReturn(fornecedorResponseDto)
-        .thenReturn(new FornecedorResponseDto());
+        .thenReturn(createFornecedorResponseDtoAlternativo());
 
-    // When
     List<FornecedorResponseDto> result = fornecedorController.complete(query);
 
-    // Then
     assertNotNull(result);
     assertEquals(2, result.size());
     verify(fornecedorService).completeFornecedor(query);
@@ -96,13 +106,10 @@ class FornecedorControllerTest {
 
   @Test
   void testFindAll() {
-    // Given
     when(fornecedorService.findAll(any(Sort.class))).thenReturn(fornecedoresDto);
 
-    // When
     List<FornecedorResponseDto> result = fornecedorController.findAll();
 
-    // Then
     assertNotNull(result);
     assertEquals(2, result.size());
     verify(fornecedorService).findAll(Sort.by("id"));
@@ -110,13 +117,10 @@ class FornecedorControllerTest {
 
   @Test
   void testSave() {
-    // Given
     when(fornecedorService.save(fornecedor)).thenReturn(fornecedorResponseDto);
 
-    // When
     FornecedorResponseDto result = fornecedorController.save(fornecedor);
 
-    // Then
     assertNotNull(result);
     assertEquals(fornecedorResponseDto, result);
     verify(fornecedorService).save(fornecedor);
@@ -124,14 +128,11 @@ class FornecedorControllerTest {
 
   @Test
   void testFindOne() {
-    // Given
     Long id = 1L;
     when(fornecedorService.findOne(id)).thenReturn(fornecedorResponseDto);
 
-    // When
     FornecedorResponseDto result = fornecedorController.findone(id);
 
-    // Then
     assertNotNull(result);
     assertEquals(fornecedorResponseDto, result);
     verify(fornecedorService).findOne(id);
@@ -139,16 +140,13 @@ class FornecedorControllerTest {
 
   @Test
   void testDelete() {
-    // Given
     Long id = 1L;
     when(fornecedorService.findOne(id)).thenReturn(fornecedorResponseDto);
     when(fornecedorService.toEntity(fornecedorResponseDto)).thenReturn(fornecedor);
     doNothing().when(fornecedorService).delete(id);
 
-    // When
     fornecedorController.delete(id);
 
-    // Then
     verify(fornecedorService).findOne(id);
     verify(fornecedorService).toEntity(fornecedorResponseDto);
     verify(fornecedorService).delete(id);
@@ -156,34 +154,27 @@ class FornecedorControllerTest {
 
   @Test
   void testExists() {
-    // Given
     Long id = 1L;
     when(fornecedorService.exists(id)).thenReturn(true);
 
-    // When
     boolean result = fornecedorController.exists(id);
 
-    // Then
     assertTrue(result);
     verify(fornecedorService).exists(id);
   }
 
   @Test
   void testCount() {
-    // Given
     when(fornecedorService.count()).thenReturn(10L);
 
-    // When
     long result = fornecedorController.count();
 
-    // Then
     assertEquals(10L, result);
     verify(fornecedorService).count();
   }
 
   @Test
   void testFindAllPagedWithFilterAndOrder() {
-    // Given
     int page = 0;
     int size = 10;
     String filter = "teste";
@@ -195,11 +186,9 @@ class FornecedorControllerTest {
     when(fornecedorService.findAllSpecification(any(Specification.class), any(PageRequest.class)))
         .thenReturn(pageResult);
 
-    // When
     Page<FornecedorResponseDto> result =
         fornecedorController.findAllPaged(page, size, filter, order, asc);
 
-    // Then
     assertNotNull(result);
     assertEquals(2, result.getContent().size());
     verify(fornecedorService).filterByAllFields(filter);
@@ -209,18 +198,15 @@ class FornecedorControllerTest {
 
   @Test
   void testFindAllPagedWithoutFilter() {
-    // Given
     int page = 0;
     int size = 10;
 
     Page<FornecedorResponseDto> pageResult = new PageImpl<>(fornecedoresDto);
     when(fornecedorService.findAll(any(PageRequest.class))).thenReturn(pageResult);
 
-    // When
     Page<FornecedorResponseDto> result =
         fornecedorController.findAllPaged(page, size, null, null, null);
 
-    // Then
     assertNotNull(result);
     assertEquals(2, result.getContent().size());
     verify(fornecedorService).findAll(any(PageRequest.class));
@@ -228,7 +214,6 @@ class FornecedorControllerTest {
 
   @Test
   void testFindAllPagedWithEmptyFilter() {
-    // Given
     int page = 0;
     int size = 10;
     String filter = "";
@@ -236,11 +221,9 @@ class FornecedorControllerTest {
     Page<FornecedorResponseDto> pageResult = new PageImpl<>(fornecedoresDto);
     when(fornecedorService.findAll(any(PageRequest.class))).thenReturn(pageResult);
 
-    // When
     Page<FornecedorResponseDto> result =
         fornecedorController.findAllPaged(page, size, filter, null, null);
 
-    // Then
     assertNotNull(result);
     assertEquals(2, result.getContent().size());
     verify(fornecedorService).findAll(any(PageRequest.class));
@@ -248,7 +231,6 @@ class FornecedorControllerTest {
 
   @Test
   void testFindAllPagedWithOrderButNoFilter() {
-    // Given
     int page = 0;
     int size = 10;
     String order = "nome";
@@ -257,11 +239,9 @@ class FornecedorControllerTest {
     Page<FornecedorResponseDto> pageResult = new PageImpl<>(fornecedoresDto);
     when(fornecedorService.findAll(any(PageRequest.class))).thenReturn(pageResult);
 
-    // When
     Page<FornecedorResponseDto> result =
         fornecedorController.findAllPaged(page, size, null, order, asc);
 
-    // Then
     assertNotNull(result);
     assertEquals(2, result.getContent().size());
     verify(fornecedorService).findAll(any(PageRequest.class));
@@ -269,28 +249,27 @@ class FornecedorControllerTest {
 
   @Test
   void testPreSave() {
-    // Given
-    Fornecedor object = new Fornecedor();
-
-    // When & Then - Não deve lançar exceção
-    assertDoesNotThrow(() -> fornecedorController.preSave(object));
+    assertDoesNotThrow(() -> fornecedorController.preSave(fornecedor));
   }
 
   @Test
   void testPostSave() {
-    // Given
-    Fornecedor object = new Fornecedor();
-
-    // When & Then - Não deve lançar exceção
-    assertDoesNotThrow(() -> fornecedorController.postSave(object));
+    assertDoesNotThrow(() -> fornecedorController.postSave(fornecedor));
   }
 
   @Test
   void testPostDelete() {
-    // Given
-    Fornecedor object = new Fornecedor();
+    assertDoesNotThrow(() -> fornecedorController.postDelete(fornecedor));
+  }
 
-    // When & Then - Não deve lançar exceção
-    assertDoesNotThrow(() -> fornecedorController.postDelete(object));
+  private FornecedorResponseDto createFornecedorResponseDtoAlternativo() {
+    FornecedorResponseDto dto = new FornecedorResponseDto();
+    dto.setId(2L);
+    dto.setNomeFantasia("Fornecedor Teste 2");
+    dto.setRazaoSocial("Empresa Teste 2 Ltda");
+    dto.setCnpj("98765432109876");
+    dto.setEmail("contato2@teste.com");
+    dto.setTelefone("9988776655");
+    return dto;
   }
 }
